--- a/index.Rmd
+++ b/index.Rmd
@@ -7,8 +7,10 @@ framework   : io2012   # {io2012, html5slides, shower, dzslides, ...}
 highlighter : highlight.js  # {highlight.js, prettify, highlight}
 hitheme     : tomorrow      # 
 widgets     : []            # {mathjax, quiz, bootstrap}
-mode        : standalone # {standalone, draft}
-
+mode        : selfcontained # {standalone, draft}
+github:
+  user: anchuvan
+  repo: Introductory R
 ---
 
 ## Table of contents
